# proto/gen/api/v1/inbox_service.pb.go
@@ -80,6 +80,7 @@ const (
 	Inbox_TYPE_UNSPECIFIED Inbox_Type = 0
 	Inbox_MEMO_COMMENT     Inbox_Type = 1
 	Inbox_VERSION_UPDATE   Inbox_Type = 2
+	Inbox_MEMO_REACTION    Inbox_Type = 3
 )
 
 // Enum value maps for Inbox_Type.
@@ -88,11 +89,13 @@ var (
 		0: "TYPE_UNSPECIFIED",
 		1: "MEMO_COMMENT",
 		2: "VERSION_UPDATE",
+		3: "MEMO_REACTION",
 	}
 	Inbox_Type_value = map[string]int32{
 		"TYPE_UNSPECIFIED": 0,
 		"MEMO_COMMENT":     1,
 		"VERSION_UPDATE":   2,
+		"MEMO_REACTION":    3,
 	}
 )
 
@@ -437,7 +440,7 @@ var File_api_v1_inbox_service_proto protoreflect.FileDescriptor
 
 const file_api_v1_inbox_service_proto_rawDesc = "" +
 	"\n" +
-	"\x1aapi/v1/inbox_service.proto\x12\fmemos.api.v1\x1a\x1cgoogle/api/annotations.proto\x1a\x17google/api/client.proto\x1a\x1bgoogle/protobuf/empty.proto\x1a google/protobuf/field_mask.proto\x1a\x1fgoogle/protobuf/timestamp.proto\"\xa4\x03\n" +
+	"\x1aapi/v1/inbox_service.proto\x12\fmemos.api.v1\x1a\x1cgoogle/api/annotations.proto\x1a\x17google/api/client.proto\x1a\x1bgoogle/protobuf/empty.proto\x1a google/protobuf/field_mask.proto\x1a\x1fgoogle/protobuf/timestamp.proto\"\xb7\x03\n" +
 	"\x05Inbox\x12\x12\n" +
 	"\x04name\x18\x01 \x01(\tR\x04name\x12\x16\n" +
 	"\x06sender\x18\x02 \x01(\tR\x06sender\x12\x1a\n" +
@@ -452,11 +455,12 @@ const file_api_v1_inbox_service_proto_rawDesc = "" +
 	"\x12STATUS_UNSPECIFIED\x10\x00\x12\n" +
 	"\n" +
 	"\x06UNREAD\x10\x01\x12\f\n" +
-	"\bARCHIVED\x10\x02\"B\n" +
+	"\bARCHIVED\x10\x02\"U\n" +
 	"\x04Type\x12\x14\n" +
 	"\x10TYPE_UNSPECIFIED\x10\x00\x12\x10\n" +
 	"\fMEMO_COMMENT\x10\x01\x12\x12\n" +
-	"\x0eVERSION_UPDATE\x10\x02B\x0e\n" +
+	"\x0eVERSION_UPDATE\x10\x02\x12\x11\n" +
+	"\rMEMO_REACTION\x10\x03B\x0e\n" +
 	"\f_activity_id\"d\n" +
 	"\x12ListInboxesRequest\x12\x12\n" +
 	"\x04user\x18\x01 \x01(\tR\x04user\x12\x1b\n" +
